Disable Disqus (removed from Hugo core)

--- a/themes/hugo-8bits-theme/layouts/_default/single.html
+++ b/themes/hugo-8bits-theme/layouts/_default/single.html
@@ -47,8 +47,8 @@
   <!-- Comments -->
   <section id="comments">
     <div class="d-flex justify-content-center m-5">
-      {{ template "_internal/disqus.html" . }}
-      {{ partial "disqus.html" . }}
+      {{/*  template "_internal/disqus.html" . */}}
+      {{/* partial "disqus.html" . */}}
     </div>
   </section>
 
